ADD a draft post and how to write a draft post

--- a/_posts/2024-11-26-images.md
+++ b/_posts/2024-11-26-images.md
@@ -95,3 +95,16 @@ The rest of the images in this post are all zoomable, arranged into different mi
         {% include figure.liquid path="assets/img/7.jpg" class="img-fluid rounded z-depth-1" zoomable=true %}
     </div>
 </div>
+## Drafts
+
+Jekyll 判断blog是否要发布会看两个时间，一个是文件名的时间前缀，另一个是 front matter 的 date 时间。
+
+- 如果文件名不包含时间，则认为是draft
+- 如果文件名时间或 front matter 的 date 时间在系统时间之后，则不会发布
+- 网页上的时间是按照 front matter 的 date 时间
+
+**因此推荐的做法是**
+
+- 文件名的时间按撰写的时间
+-  front matter 的 date 时间可以先写一个未来的时间，等要正式发布时，才改为过去的时间
+
