--- a/_posts/2024-12-15-Matrix.md
+++ b/_posts/2024-12-15-Matrix.md
@@ -94,7 +94,9 @@ $$
 
 虽然特征值可以提供一些信息，但仅仅知道特征值是否有重复**并不能直接判断**矩阵是否满秩。只有当确定**是否存在零特征值**时，才能通过特征值判断矩阵是否满秩。
 
-## [约旦标准型](https://en.wikipedia.org/wiki/Jordan_normal_form)
+## [约当标准型](https://en.wikipedia.org/wiki/Jordan_normal_form)
+
+<img src="/images/2024-12-15-Matrix/Jordan_canonical_form.svg.png" alt="By Michael Hardy - Own work, CC BY-SA 4.0, https://commons.wikimedia.org/w/index.php?curid=125410521" style="zoom:50%;" />
 
 | 特性 | 矩阵对角化              | 约旦标准形                                 |
 | ---- | ----------------------- | ------------------------------------------ |
@@ -103,3 +105,42 @@ $$
 | 形式 | 对角矩阵                | 由约旦块组成的准对角矩阵                   |
 | 应用 | 简化计算，分析矩阵性质  | 处理不可对角化的矩阵，更深入地分析矩阵结构 |
 | 关系 | 是约旦标准形的特例      | 是对角化的推广                             |
+
+## 矩阵指数
+
+### 计算方法
+
+#### 可对角化
+
+若矩阵可对角化
+
+$$ A = UDU^{−1}$$ 且 *D* 是对角矩阵，则
+
+$$e^A = Ue^{D}U^{−1}$$
+
+#### 零幂的情况
+
+A matrix *N* is [nilpotent](https://en.wikipedia.org/wiki/Nilpotent_matrix) if $$N^q = 0$$ for some integer *q*. In this case, the matrix exponential $$*e^N$$ can be computed directly from the series expansion, as the series terminates after a finite number of terms:
+
+$$
+{\displaystyle e^{N}=I+N+{\frac {1}{2}}N^{2}+{\frac {1}{6}}N^{3}+\cdots +{\frac {1}{(q-1)!}}N^{q-1}~.}
+$$
+
+#### **Jordan canonical form** 约当标准型
+
+Suppose that $$X = PJP^{−1}$$ where *J* is the Jordan form of *X*. Then 
+
+$${\displaystyle e^{X}=Pe^{J}P^{-1}}$$
+
+并且，由于
+
+$${\displaystyle {\begin{aligned}J&=J_{a_{1}}(\lambda _{1})\oplus J_{a_{2}}(\lambda _{2})\oplus \cdots \oplus J_{a_{n}}(\lambda _{n}),\\e^{J}&=\exp {\big (}J_{a_{1}}(\lambda _{1})\oplus J_{a_{2}}(\lambda _{2})\oplus \cdots \oplus J_{a_{n}}(\lambda _{n}){\big )}\\&=\exp {\big (}J_{a_{1}}(\lambda _{1}){\big )}\oplus \exp {\big (}J_{a_{2}}(\lambda _{2}){\big )}\oplus \cdots \oplus \exp {\big (}J_{a_{n}}(\lambda _{n}){\big )}.\end{aligned}}}$$
+
+因此，我们只需要指导如何计算一个约当块的矩阵指数。由于每一个约当块具有如下形式
+
+$${\displaystyle {\begin{aligned}&&J_{a}(\lambda )&=\lambda I+N\\&\Rightarrow &e^{J_{a}(\lambda )}&=e^{\lambda I+N}=e^{\lambda }e^{N}.\end{aligned}}}$$
+
+其中 *N* 是一种特殊的零幂矩阵。 *J* 的矩阵指数为
+
+$${\displaystyle e^{J}=e^{\lambda _{1}}e^{N_{a_{1}}}\oplus e^{\lambda _{2}}e^{N_{a_{2}}}\oplus \cdots \oplus e^{\lambda _{n}}e^{N_{a_{n}}}}$$
+
