--- a/_posts/2024-12-15-Matrix.md
+++ b/_posts/2024-12-15-Matrix.md
@@ -5,8 +5,52 @@ date: 2024-12-14 12:01:00
 description: Matrix
 tags: research math
 categories: sample-posts
+toc:
+  sidebar: left # or right
 typora-root-url: ../
 ---
+
+## 特征值和特征根
+
+详细的求解步骤和示例：
+
+**1. 定义**
+
+对于一个 n 阶方阵 A，如果存在一个非零向量 v 和一个标量 λ，使得：
+
+Av = λv
+
+那么 λ 称为矩阵 A 的一个特征值（或特征根），v 称为 A 对应于特征值 λ 的一个特征向量。
+
+**2. 求解特征值**
+
+- 将上述等式变形为：
+
+  (A - λE)v = 0
+
+  其中 E 是 n 阶单位矩阵。
+
+- 要使上式有非零解 v，系数矩阵 (A - λE) 的行列式必须为零：
+
+  $$|A - λE| = 0$$
+
+- 这个方程称为矩阵 A 的特征方程。解这个方程，就可以得到矩阵 A 的所有特征值 λ。特征方程是一个关于 λ 的 n 次多项式方程。
+
+**3. 求解特征向量**
+
+对于每个求出的特征值 λ，将其代入方程 (A - λE)v = 0，解这个齐次线性方程组，得到的非零解 v 就是对应于特征值 λ 的特征向量。
+
+**4. 求解步骤总结**
+
+- 写出特征方程  
+
+  $$|A-\lambda E|=0$$
+
+- 解特征方程，求出所有特征值 $$λ_1, λ_2, ..., λ_n$$。
+
+- 对于每个特征值 λ<sub>i</sub>，解齐次线性方程组 (A - λ<sub>i</sub>E)v = 0，求出对应的特征向量 v<sub>i</sub>。
+
+
 
 ## 余子式，代数余子式
 
@@ -19,6 +63,7 @@ typora-root-url: ../
 余子式：$${\textstyle M_{i,j}=\det {\bigl (}\left(\mathbf {A} _{p,q}\right)_{p\neq i,q\neq j}{\bigr )}}$$
 
 代数余子式： $$ {\displaystyle C_{ij}=(-1)^{i+j}M_{ij}} $$
+
 $$
 {\displaystyle {\begin{aligned}\det(\mathbf {A} )&=a_{1j}C_{1j}+a_{2j}C_{2j}+a_{3j}C_{3j}+\cdots +a_{nj}C_{nj}\\[2pt]&=\sum _{i=1}^{n}a_{ij}C_{ij}\\[2pt]&=\sum _{i=1}^{n}a_{ij}(-1)^{i+j}M_{ij}\end{aligned}}}
 $$
@@ -31,7 +76,10 @@ $$
 $$
 {\displaystyle \mathbf {C} =\left((-1)^{i+j}\mathbf {M} _{ij}\right)_{1\leq i,j\leq n}}
 $$
+
+
 伴随矩阵
+
 $$
 {\displaystyle \operatorname {adj} (\mathbf {A} )=\mathbf {C} ^{\mathsf {T}}=\left((-1)^{i+j}\mathbf {M} _{ji}\right)_{1\leq i,j\leq n}}
 $$
@@ -106,6 +154,10 @@ $$
 | 应用 | 简化计算，分析矩阵性质  | 处理不可对角化的矩阵，更深入地分析矩阵结构 |
 | 关系 | 是约旦标准形的特例      | 是对角化的推广                             |
 
+### 谱映射定理 Spectral mapping theorem
+
+Using the Jordan normal form, direct calculation gives a spectral mapping theorem for the [polynomial functional calculus](https://en.wikipedia.org/wiki/Functional_calculus): Let *A* be an *n* × *n* matrix with eigenvalues $$ \lambda_1,..., \lambda_n $$,  then for any polynomial *p*, *p*(*A*) has eigenvalues  $$p(\lambda_1), ...,p(\lambda_n)$$.
+
 ## 矩阵指数
 
 ### 计算方法
@@ -120,7 +172,7 @@ $$e^A = Ue^{D}U^{−1}$$
 
 #### 零幂的情况
 
-A matrix *N* is [nilpotent](https://en.wikipedia.org/wiki/Nilpotent_matrix) if $$N^q = 0$$ for some integer *q*. In this case, the matrix exponential $$*e^N$$ can be computed directly from the series expansion, as the series terminates after a finite number of terms:
+A matrix *N* is [nilpotent](https://en.wikipedia.org/wiki/Nilpotent_matrix) if $$N^q = 0$$ for some integer *q*. In this case, the matrix exponential $$e^N$$ can be computed directly from the series expansion, as the series terminates after a finite number of terms:
 
 $$
 {\displaystyle e^{N}=I+N+{\frac {1}{2}}N^{2}+{\frac {1}{6}}N^{3}+\cdots +{\frac {1}{(q-1)!}}N^{q-1}~.}
