Adjust Line height

--- a/_posts/2025-12-25-flow.md
+++ b/_posts/2025-12-25-flow.md
@@ -17,9 +17,9 @@ typora-root-url: ../
 
 ### 论文和博客
 
-[1] [Flow Matching For Generative Models From Scratch | by Nikolaus Correll | Toward Humanoids | Medium](https://medium.com/@nikolaus.correll/flow-matching-for-generative-models-from-scratch-8264bad4e0ba)
+[1] [Flow Matching For Generative Models From Scratch \| by Nikolaus Correll \| Toward Humanoids \| Medium](https://medium.com/@nikolaus.correll/flow-matching-for-generative-models-from-scratch-8264bad4e0ba)
 
-[2] [A Visual Dive into Conditional Flow Matching | ICLR Blogposts 2025](https://dl.heeere.com/conditional-flow-matching/blog/conditional-flow-matching/)
+[2] [A Visual Dive into Conditional Flow Matching \| ICLR Blogposts 2025](https://dl.heeere.com/conditional-flow-matching/blog/conditional-flow-matching/)
 
 ### toy example
 
